# spodjfy

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  rust-toolchain
src/: config.rs  image_loader.rs  lib.rs  login_server.rs  main.rs  scopes.rs  spotify.rs  utils.rs
src/components/: album_list.rs  media_controls.rs  mod.rs  notifier.rs  paged_loader.rs  spotify.rs  track_list.rs  win.rs
src/components/lists/: album.rs  artist.rs  category.rs  common.rs  mod.rs  playlist.rs  track.rs
src/components/lists/track/: handler.rs  item_view.rs  message.rs  mod.rs
src/components/media_controls/: mod.rs  play_context.rs
src/components/tabs/: albums.rs  artists.rs  categories.rs  devices.rs  favorites.rs  featured.rs  mod.rs  new_releases.rs  now_playing.rs  playlists.rs  queue.rs  recent.rs  search.rs  settings.rs  shows.rs  top_artists.rs  top_tracks.rs  tracks.rs
src/loaders/: album.rs  artist.rs  category.rs  common.rs  image.rs  mod.rs  paged.rs  playlist.rs  track.rs
src/models/: album.rs  artist.rs  category.rs  common.rs  episode.rs  mod.rs  page.rs  playlist.rs  show.rs  track.rs  user.rs
src/servers/: login.rs  mod.rs  spotify.rs  store.rs
src/services/: api.rs  login.rs  mod.rs  spotify.rs  store.rs
src/services/spotify/: mod.rs  refresh_token.rs  service.rs
src/services/storage/: mod.rs  store.rs  tracks.rs
