[package]
name = "spodjfy"
version = "0.1.0"
authors = ["Konstantin Stepanov <me@kstep.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { git = "https://github.com/ramsayleung/rspotify", rev = "3ba6f2f72328c4348da6385e80abcacd97522a1b" }
relm = "0.20.0"
relm-derive = "0.20.0"
gtk = { version = "0.9.2", features = ["v3_22"] }
glib = "0.10.3"
gdk = "0.13.2"
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
toml = "0.5.7"
directories = "3.0.1"
tokio = { version = "0.2.22", features = ["full"] }
gio = "0.9.1"
gdk-pixbuf = "0.9.0"
itertools = "0.9.0"
gdk-sys = "0.10.0"
gdk-pixbuf-sys = "0.10.0"
gio-sys = "0.10.1"
libc = "0.2.80"
glib-sys = "0.10.1"
gobject-sys = "0.10.0"
log = "0.4.11"
env_logger = "0.8.1"
futures-util = "0.3.8"
notify-rust = "4.0.0"
futures = "0.3.8"
