[package]
name = "spodjfy"
version = "0.1.0"
authors = ["Konstantin Stepanov <me@kstep.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { git = "https://github.com/kstep/rspotify", rev = "c3e722e9e349c9d7b3fbe108f5c2b17d97ad8ae6" }
relm = "0.20.0"
relm-derive = "0.20.0"
gtk = { version = "0.9.2", features = ["v3_22_29"] }
glib = "0.10.3"
gdk = "0.13.2"
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
toml = "0.5.7"
directories = "3.0.1"
tokio = { version = "0.2.22", features = ["full"] }
gio = "0.9.1"
gdk-pixbuf = "0.9.0"
itertools = "0.9.0"
gdk-sys = "0.10.0"
gdk-pixbuf-sys = "0.10.0"
gio-sys = "0.10.1"
libc = "0.2.80"
glib-sys = "0.10.1"
gobject-sys = "0.10.0"
log = "0.4.11"
env_logger = "0.8.1"
futures-util = "0.3.8"
notify-rust = "4.0.0"
futures = "0.3.8"
pango = "0.9.1"
rand = "0.7.3"
derivative = "2.1.1"
cairo-rs = { version = "0.9.1", features = ["png"] }
ttl_cache = "0.5.1"
chrono = "0.4.19"
sled = "0.34.6"
bincode = "1.3.1"
reqwest = { version = "0.10.9", features = ["stream"] }
md5 = "0.7.0"
async-trait = "0.1.42"
